src/assets/main.css
@import "./base.css";

#app {
  flex-direction: column;
  min-height: inherit;
  position: relative;
  display: flex;
  margin: 0;

  font-weight: normal;
}

svg,
span {
  color: var(--color-text);
}

@media (hover: hover) {
  a:hover {
    background-color: var(--hover-color);
  }
}

.shutter-border-color {
  border-color: var(--color-border);
}

.shutter-border-mute {
  border-color: var(--color-background-mute);
}

.shutter-background-color {
  background-color: var(--color-background);
}

.shutter-background-mute {
  background-color: var(--color-background-mute);
}

.shutter-modal-color {
  background-color: var(--modal-color);
}

